# bazel-nodejs-cross-compilation

./: .bazelignore  MODULE.bazel  README.md  package.json  pnpm-lock.yaml
pkgs/foo-app/: BUILD.bazel  package.json
